refactor: streamline imports and enhance test mocking for URL and PrintWriter.